--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,14 +5,14 @@
     <uses-sdk android:minSdkVersion="3" android:targetSdkVersion="10"/>
 
     <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name="net.sroz.grocerylist.GroceryListActivity"
+        <activity android:name=".CurrentListActivity"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <provider android:name="net.sroz.grocerylist.GroceryProvider" android:authorities="net.sroz.grocerylist"></provider>
+        <provider android:name=".Provider" android:authorities="net.sroz.grocerylist"></provider>
 
     </application>
 </manifest>
